--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
       background: #d9eaff;
     }
     input[type="text"],
-    input[type="number"],
-    input[type="time"] {
+    input[type="number"] {
       padding: 8px;
       margin: 5px;
       border: 1px solid #ccc;
@@ -51,7 +50,6 @@
     button:hover {
       background: #1e3d7b;
     }
-
     #flight-edit-modal {
       display: none;
       position: fixed;
@@ -65,7 +63,6 @@
       z-index: 1000;
       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
     }
-
     #flight-edit-modal input {
       width: 220px;
     }
@@ -73,47 +70,36 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
-
   <h1>📦 Cargo System</h1>
-
   <div id="app">
-    <!-- Step 1: Year -->
     <div class="section" id="step-year">
       <h2>Select Year</h2>
       <div id="year-list"></div>
       <input type="number" id="new-year" placeholder="Add new year" />
       <button onclick="addYear()">+ Add Year</button>
     </div>
-
-    <!-- Step 2: Month -->
     <div class="section" id="step-month" style="display:none">
       <h2>Select Month</h2>
       <div id="month-list"></div>
     </div>
-
-    <!-- Step 3: Day -->
     <div class="section" id="step-day" style="display:none">
       <h2>Select Day</h2>
       <div id="day-list"></div>
     </div>
-
-    <!-- Step 4: Flight -->
     <div class="section" id="step-flight" style="display:none">
       <h2>Select Flight Number</h2>
       <div id="flight-list"></div>
       <input type="text" id="new-flight" placeholder="Flight No." />
       <input type="text" id="new-destination" placeholder="Destination (e.g. CGK)" />
-      <input type="time" id="new-std" step="1" />
+      <input type="text" id="new-std" placeholder="HH:MM" pattern="([01]\d|2[0-3]):([0-5]\d)" />
       <button onclick="addFlight()">+ Add Flight</button>
     </div>
   </div>
-
-  <!-- ✏️ Flight Edit Modal -->
   <div id="flight-edit-modal">
     <h3>Edit Flight</h3>
     <label>Flight No: <input id="edit-flight-no" /></label><br><br>
     <label>Destination: <input id="edit-destination" /></label><br><br>
-    <label>STD (24Hr): <input id="edit-std" type="time" step="1" /></label><br><br>
+    <label>STD (24Hr): <input id="edit-std" type="text" placeholder="HH:MM" pattern="([01]\d|2[0-3]):([0-5]\d)" /></label><br><br>
     <button onclick="saveFlightEdit()">💾 Save</button>
     <button onclick="closeFlightEdit()">✖️ Cancel</button>
   </div>
@@ -135,16 +121,17 @@
       { label: "OCT", value: "10" }, { label: "NOV", value: "11" }, { label: "DEC", value: "12" }
     ];
 
+    function isValidTimeFormat(timeStr) {
+      return /^([01]\d|2[0-3]):([0-5]\d)$/.test(timeStr);
+    }
+
     function convertTo24HrFormat(timeStr) {
       if (!timeStr) return "00:00";
       if (/^\d{2}:\d{2}$/.test(timeStr)) return timeStr;
-
       const [raw, ampm] = timeStr.trim().split(/ ?(AM|PM)/i);
       let [hour, minute] = raw.split(':').map(Number);
-
       if (ampm?.toUpperCase() === 'PM' && hour !== 12) hour += 12;
       if (ampm?.toUpperCase() === 'AM' && hour === 12) hour = 0;
-
       return String(hour).padStart(2, '0') + ':' + String(minute).padStart(2, '0');
     }
 
@@ -177,7 +164,6 @@
       const y = document.getElementById('new-year').value.trim();
       const yearInt = parseInt(y);
       if (!y || years.includes(yearInt)) return;
-
       const flightDate = `${yearInt}-01-01`;
       const dummy = {
         flight_no: `DUMMY-${Date.now()}`,
@@ -186,7 +172,6 @@
         destination: "CGK",
         std: "00:00:00"
       };
-
       const { error } = await sb.from("flights").insert(dummy);
       if (!error) {
         years.push(yearInt);
@@ -231,21 +216,39 @@
       }
     }
 
+    async function addFlight() {
+      const flight = document.getElementById('new-flight').value.trim().toUpperCase();
+      const destination = document.getElementById('new-destination').value.trim().toUpperCase() || "XXX";
+      const stdInput = document.getElementById('new-std').value;
+      if (!flight || !isValidTimeFormat(stdInput)) return alert("Invalid time format (HH:MM)");
+      const std = stdInput + ":00";
+      const flightDate = `${current.year}-${current.month.value}-${current.day}`;
+      const { error } = await sb.from("flights").insert({
+        flight_no: flight,
+        flight_date: flightDate,
+        origin: "DMK",
+        destination,
+        std
+      });
+      if (!error) {
+        loadFlightsFromSupabase();
+        document.getElementById('new-flight').value = '';
+        document.getElementById('new-destination').value = '';
+        document.getElementById('new-std').value = '';
+      } else {
+        alert("❌ Failed to save flight.");
+      }
+    }
+
     async function loadFlightsFromSupabase() {
       const container = document.getElementById('flight-list');
       container.innerHTML = '';
-
-      const { data } = await sb
-        .from("flights")
-        .select("id, flight_no, destination, std")
-        .eq("flight_date", `${current.year}-${current.month.value}-${current.day}`);
-
+      const { data } = await sb.from("flights").select("id, flight_no, destination, std").eq("flight_date", `${current.year}-${current.month.value}-${current.day}`);
       (data || []).forEach(flight => {
         const wrapper = document.createElement('div');
         wrapper.style.display = 'inline-flex';
         wrapper.style.alignItems = 'center';
         wrapper.style.margin = '6px';
-
         const btn = document.createElement('div');
         btn.className = 'btn';
         btn.innerText = flight.flight_no;
@@ -253,7 +256,6 @@
           const url = `final-load.html?year=${current.year}&month=${current.month.value}&monthText=${current.month.label}&day=${current.day}&flight=${flight.flight_no}`;
           window.location.href = url;
         };
-
         const edit = document.createElement('button');
         edit.innerText = '✏️';
         edit.onclick = () => {
@@ -263,7 +265,6 @@
           document.getElementById("edit-std").value = convertTo24HrFormat(flight.std?.slice(0, 5));
           document.getElementById("flight-edit-modal").style.display = "block";
         };
-
         const del = document.createElement('button');
         del.innerText = '🗑️';
         del.onclick = async () => {
@@ -272,7 +273,6 @@
             loadFlightsFromSupabase();
           }
         };
-
         wrapper.appendChild(btn);
         wrapper.appendChild(edit);
         wrapper.appendChild(del);
@@ -283,14 +283,14 @@
     async function saveFlightEdit() {
       const newNo = document.getElementById("edit-flight-no").value.trim().toUpperCase();
       const newDest = document.getElementById("edit-destination").value.trim().toUpperCase();
-      const newSTD = document.getElementById("edit-std").value + ":00";
-
+      const stdInput = document.getElementById("edit-std").value;
+      if (!isValidTimeFormat(stdInput)) return alert("Invalid STD format (HH:MM)");
+      const newSTD = stdInput + ":00";
       const { error } = await sb.from("flights").update({
         flight_no: newNo,
         destination: newDest,
         std: newSTD
       }).eq("id", currentEditFlightId);
-
       if (!error) {
         closeFlightEdit();
         loadFlightsFromSupabase();
@@ -304,33 +304,7 @@
       currentEditFlightId = null;
     }
 
-    async function addFlight() {
-      const flight = document.getElementById('new-flight').value.trim().toUpperCase();
-      const destination = document.getElementById('new-destination').value.trim().toUpperCase() || "XXX";
-      const std = document.getElementById('new-std').value || "00:00:00";
-      if (!flight) return;
-
-      const flightDate = `${current.year}-${current.month.value}-${current.day}`;
-      const { error } = await sb.from("flights").insert({
-        flight_no: flight,
-        flight_date: flightDate,
-        origin: "DMK",
-        destination,
-        std
-      });
-
-      if (!error) {
-        loadFlightsFromSupabase();
-        document.getElementById('new-flight').value = '';
-        document.getElementById('new-destination').value = '';
-        document.getElementById('new-std').value = '';
-      } else {
-        alert("❌ Failed to save flight.");
-      }
-    }
-
     fetchYearsFromSupabase();
   </script>
-
 </body>
 </html>
