--- a/final-load.html
+++ b/final-load.html
@@ -95,10 +95,44 @@
       flight: params.get('flight')
     };
 
+    let flightId = null;
+    const uldMap = {};
+
     document.getElementById('flight-info').innerText =
       `Flight ${flightInfo.flight} on ${flightInfo.day}-${flightInfo.monthText}-${flightInfo.year}`;
 
-    const uldMap = {}; // { uldNo: [{awbNo, qty, weight}] }
+    async function loadInitialULDs() {
+      const flightDate = `${flightInfo.year}-${flightInfo.month}-${flightInfo.day}`;
+      const { data: flightData } = await sb
+        .from("flights")
+        .select("id")
+        .eq("flight_no", flightInfo.flight)
+        .eq("flight_date", flightDate)
+        .single();
+
+      if (!flightData) return;
+      flightId = flightData.id;
+
+      const { data: ulds } = await sb
+        .from("ulds")
+        .select("id, uld_no")
+        .eq("flight_id", flightId);
+
+      for (const uld of ulds) {
+        const { data: awbs } = await sb
+          .from("awbs")
+          .select("awb_no, pcs, weight")
+          .eq("uld_id", uld.id);
+
+        uldMap[uld.uld_no] = (awbs || []).map(a => ({
+          awbNo: a.awb_no,
+          qty: a.pcs,
+          weight: a.weight
+        }));
+      }
+
+      renderULDs();
+    }
 
     function addAWB() {
       const uldNo = document.getElementById('uldNo').value.trim().toUpperCase();
@@ -129,22 +163,27 @@
         block.className = 'uld-block';
 
         const header = document.createElement('h3');
-        header.textContent = `ULD: ${uld}`;
+        header.innerHTML = `ULD: ${uld}
+          <button class="btn-gray" onclick="editULDName('${uld}')">✏️ Edit</button>
+          <button class="btn-red" onclick="deleteULD('${uld}')">🗑️ Delete ULD</button>`;
         block.appendChild(header);
 
         const table = document.createElement('table');
         table.innerHTML = `
-          <thead><tr><th>AWB No</th><th>PCS</th><th>Weight</th></tr></thead>
+          <thead><tr><th>AWB No</th><th>PCS</th><th>Weight</th><th>Action</th></tr></thead>
           <tbody></tbody>
         `;
-
         const tbody = table.querySelector('tbody');
-        uldMap[uld].forEach(entry => {
+        uldMap[uld].forEach((entry, i) => {
           const row = document.createElement('tr');
           row.innerHTML = `
             <td>${entry.awbNo}</td>
             <td>${entry.qty}</td>
             <td>${entry.weight}</td>
+            <td>
+              <button onclick="editAWB('${uld}', ${i})">✏️</button>
+              <button class="btn-red" onclick="deleteAWB('${uld}', ${i})">🗑️</button>
+            </td>
           `;
           tbody.appendChild(row);
         });
@@ -154,70 +193,121 @@
       });
     }
 
+    function editULDName(oldUldNo) {
+      const newName = prompt("Enter new ULD No", oldUldNo);
+      if (newName && newName !== oldUldNo) {
+        uldMap[newName] = uldMap[oldUldNo];
+        delete uldMap[oldUldNo];
+        renderULDs();
+        document.getElementById('uldNo').value = newName;
+      }
+    }
+
+    function deleteULD(uldNo) {
+      if (confirm(`Delete entire ULD ${uldNo}?`)) {
+        delete uldMap[uldNo];
+        renderULDs();
+      }
+    }
+
+    function deleteAWB(uldNo, index) {
+      if (confirm("Delete this AWB?")) {
+        uldMap[uldNo].splice(index, 1);
+        if (uldMap[uldNo].length === 0) delete uldMap[uldNo];
+        renderULDs();
+      }
+    }
+
+    function editAWB(uldNo, index) {
+      const entry = uldMap[uldNo][index];
+      const modal = document.createElement('div');
+      modal.id = 'awb-edit-modal';
+      modal.style.position = 'fixed';
+      modal.style.top = '30%';
+      modal.style.left = '50%';
+      modal.style.transform = 'translate(-50%, -30%)';
+      modal.style.background = '#fff';
+      modal.style.border = '1px solid #ccc';
+      modal.style.padding = '16px';
+      modal.style.zIndex = 1000;
+      modal.innerHTML = `
+        <div style="font-family:Segoe UI;">
+          <label>AWB No: <input id="edit-awb" value="${entry.awbNo}" /></label><br/>
+          <label>PCS: <input id="edit-qty" type="number" value="${entry.qty}" /></label><br/>
+          <label>Weight (kg): <input id="edit-weight" type="number" value="${entry.weight}" /></label><br/><br/>
+          <button onclick="applyEdit('${uldNo}', ${index})">Save</button>
+          <button onclick="document.body.removeChild(this.parentNode.parentNode)">Cancel</button>
+        </div>
+      `;
+      document.body.appendChild(modal);
+    }
+
+    function applyEdit(uldNo, index) {
+      const awb = document.getElementById('edit-awb').value.trim();
+      const qty = document.getElementById('edit-qty').value.trim();
+      const weight = document.getElementById('edit-weight').value.trim();
+
+      if (awb) uldMap[uldNo][index].awbNo = awb;
+      if (qty) uldMap[uldNo][index].qty = qty;
+      if (weight) uldMap[uldNo][index].weight = weight;
+
+      const modal = document.getElementById('awb-edit-modal');
+      if (modal) document.body.removeChild(modal);
+      renderULDs();
+    }
+
     function goToSummary() {
       localStorage.setItem('flightInfo', JSON.stringify(flightInfo));
       localStorage.setItem('uldData', JSON.stringify(uldMap));
       window.location.href = 'cargo-summary.html';
     }
 
-async function saveToSupabase() {
-  const { flight, day, monthText, year } = flightInfo;
-  const origin = "DMK";
-  const destination = "CGK";
-  const flightDate = `${year}-${monthTextToNumber(monthText)}-${day.padStart(2, '0')}`;
-  const stdTime = "00:00:00";
+    async function saveToSupabase() {
+      const { flight, day, monthText, year } = flightInfo;
+      const flightDate = `${year}-${monthTextToNumber(monthText)}-${day.padStart(2, '0')}`;
+      const origin = "DMK";
+      const destination = "CGK";
+      const stdTime = "00:00:00";
 
-  // ✅ ตรวจสอบก่อนว่า flight นี้มีอยู่แล้วไหม
-  const { data: existingFlight, error: flightCheckError } = await sb
-    .from("flights")
-    .select("id")
-    .eq("flight_no", flight)
-    .eq("flight_date", flightDate)
-    .maybeSingle();
+      if (!flightId) {
+        const res = await sb.from("flights").insert({
+          flight_no: flight,
+          flight_date: flightDate,
+          origin,
+          destination,
+          std: stdTime
+        }).select();
+        flightId = res.data?.[0]?.id;
+      }
 
-  let flightId = existingFlight?.id;
+      if (!flightId) return alert("❌ Failed to save flight.");
 
-  if (!flightId) {
-    // 🆕 ถ้ายังไม่มี ให้ insert ใหม่
-    const flightRes = await sb.from("flights").insert({
-      flight_no: flight,
-      flight_date: flightDate,
-      origin,
-      destination,
-      std: stdTime
-    }).select();
+      for (const uldNo in uldMap) {
+        const uldRes = await sb.from("ulds").insert({
+          flight_id: flightId,
+          uld_no: uldNo,
+          reg: "",
+          shc: ""
+        }).select();
 
-    flightId = flightRes.data?.[0]?.id;
-  }
+        const uldId = uldRes.data?.[0]?.id;
+        if (!uldId) continue;
 
-  if (!flightId) return alert("❌ Failed to save flight.");
+        for (const awb of uldMap[uldNo]) {
+          await sb.from("awbs").insert({
+            uld_id: uldId,
+            awb_no: awb.awbNo,
+            pcs: parseInt(awb.qty),
+            weight: parseFloat(awb.weight),
+            destination: destination,
+            part: "",
+            shc: ""
+          });
+        }
+      }
 
-  for (const uldNo in uldMap) {
-    const uldRes = await sb.from("ulds").insert({
-      flight_id: flightId,
-      uld_no: uldNo,
-      reg: "",
-      shc: ""
-    }).select();
-
-    const uldId = uldRes.data?.[0]?.id;
-    if (!uldId) continue;
-
-    for (const awb of uldMap[uldNo]) {
-      await sb.from("awbs").insert({
-        uld_id: uldId,
-        awb_no: awb.awbNo,
-        pcs: parseInt(awb.qty),
-        weight: parseFloat(awb.weight),
-        destination: destination,
-        part: "",
-        shc: ""
-      });
+      alert("✅ Saved all data to Supabase!");
     }
-  }
-
-  alert("✅ Saved all data to Supabase!");
-}
 
     function monthTextToNumber(text) {
       const map = {
@@ -226,6 +316,8 @@ async function saveToSupabase() {
       };
       return map[text.toUpperCase()] || "01";
     }
+
+    loadInitialULDs();
   </script>
 </body>
 </html>
